--- a/views/serencast.erb
+++ b/views/serencast.erb
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Serencast</title>
-    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link rel="icon" href="/images/favicon.ico" />
     <script language="JavaScript" src="/javascripts/jquery.js"></script>
     <script language="JavaScript">
       //var data;
