--- a/app/stylesheets/gear.css
+++ b/app/stylesheets/gear.css
@@ -40,12 +40,12 @@ span {
 #menu {
     position: absolute;
     top: 0pt;
-    left: 50pt;
+    left: 0pt;
     //height:400;
     //width:300;
-
-    height: 50%;
-    width: 40%;
+    //height: 50%;
+    //width: 40%;
+    font-family: sans-serif;
 }
 
 #panel {
