--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -8,7 +8,35 @@ webview {
     padding: 0;
 }
 
-#webview_wrapper {
-    width: 100%;
-    height: 100%;
+//#webview_wrapper {
+//    width: 100%;
+//    height: 100%;
+//}
+
+.erase_menu {
+    background-color: rgba(255,255,200,0);
+    //visibility: hidden;
+    transition-property: all;
+    transition-duration: 1000ms;
+    transition-delay: 0ms;
+    transition-timing-function: linear;
+}
+.show_menu {
+    background-color: rgba(255,255,200,0.7);
+}
+
+.erase_line {
+    color: rgba(0,0,0,0);
+    transition-property: all;
+    transition-duration: 1000ms;
+    transition-delay: 0ms;
+    transition-timing-function: linear;
+}
+
+.show_line {
+    color: rgba(0,0,0,1);
+}
+
+.show_selected_line {
+    color: rgba(0,0,255,1);
 }
