--- a/views/serencast.erb
+++ b/views/serencast.erb
@@ -11,6 +11,7 @@
       //});
       var project = '<%= @project %>';
       var page = '<%= @page %>';
+      var test = <%= @test %>
 
       //
       // index.htmlをメニューとして画面の左側1/5ぐらいで大きく開く
@@ -25,7 +26,7 @@
       }
       
       param = `top=0,left=1,height=${height},width=${width}`;
-      window.open(`http://${location.host}/menu.html?project=${project}&page=${page}&test=<%= @test %>`,"menu",param);
+      window.open(`http://${location.host}/menu.html?project=${project}&page=${page}&test=${test}`,"menu",param);
     </script>
   </head>
   <body>
